<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_tariffs"
            android:title="@string/tarifs" />
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_tests"
            android:title="@string/tests" />
        <item
            android:id="@+id/nav_tasks"
            android:title="@string/tasks" />
        <item
            android:id="@+id/nav_faq"
            android:title="@string/faq" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_exit"
                android:title="@string/exit" />
        </menu>
    </item>
</menu>
