<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RestoreActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/sky"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/account_restore"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />
        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="250dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notRegistered"
                        android:visibility="invisible"
                        android:textSize="14dp"
                        android:maxWidth="300dp"
                        android:textColor="@color/red"/>
                    <TextView
                        android:layout_width="250dp"
                        android:layout_height="30dp"
                        android:text="@string/choose"
                        android:textSize="14dp"/>
                    <TextView
                        android:id="@+id/country"
                        android:layout_width="250dp"
                        android:layout_height="30dp"
                        android:paddingBottom="3dp"
                        android:hint="@string/kazakhstan"
                        android:paddingLeft="5dp"
                        android:background="@drawable/gray_bottom_line"
                        android:textSize="18dp"/>
                    <TextView
                        android:id="@+id/countryError"
                        android:layout_width="250dp"
                        android:layout_height="16dp"
                        android:textSize="13dp"
                        android:visibility="invisible"
                        android:gravity="right"
                        android:text="@string/require"
                        android:textColor="@color/red"/>
                    <TextView
                        android:layout_width="250dp"
                        android:layout_height="30dp"
                        android:text="@string/phoneN"
                        android:textSize="14dp"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="+7"
                            android:textColor="@color/black"
                            android:layout_marginTop="1dp"
                            android:textSize="18dp"/>
                        <EditText
                            android:id="@+id/phone_restore"
                            android:inputType="phone|number"
                            android:maxLength="12"
                            android:layout_width="250dp"
                            android:layout_height="30dp"
                            android:paddingBottom="3dp"
                            android:paddingLeft="15dp"
                            android:background="@drawable/gray_bottom_line"
                            android:textSize="18dp"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/phoneError"
                        android:layout_width="250dp"
                        android:layout_height="16dp"
                        android:textSize="13dp"
                        android:gravity="right"
                        android:visibility="invisible"
                        android:text="@string/require"
                        android:textColor="@color/red"/>
                    <Button
                        android:id="@+id/send"
                        android:layout_width="200dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/send"
                        android:textColor="@color/white"
                        android:background="@drawable/button_design"/>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>