<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TarifFragment"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <android.support.v7.widget.CardView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardElevation="4dp"
                app:cardCornerRadius="3dp" >


                <LinearLayout
                    android:elevation="10dp"
                    android:layout_width="320dp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/study1"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/study"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/trial_lesson"
                        android:textColor="@color/smartchat"
                        android:textSize="20dp"/>

                    <TextView
                        android:layout_width="310dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:gravity="center_horizontal"
                        android:text="@string/one_free_lesson_with_teacher"
                        android:textSize="16dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1час"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:text="Индивидуально"
                        android:textStyle="bold"
                        android:textSize="16dp"/>
                    <TextView
                        android:id="@+id/textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:text="@string/cost"
                        android:textSize="16dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/curr"
                        android:textSize="16dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/smartchat"
                        />

                    <Button
                        android:id="@+id/button0ne"
                        android:layout_width="170dp"
                        android:layout_height="40dp"
                        android:background="@drawable/button_design"
                        android:text="@string/smth"
                        android:layout_marginBottom="15dp"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linear1"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                android:layout_gravity="center"
                app:cardElevation="4dp"
                app:cardCornerRadius="3dp" >

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/study2"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/study"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/individual"
                        android:textColor="@color/smartchat"
                        android:textSize="20dp"/>

                    <TextView
                        android:layout_width="300dp"
                        android:layout_marginRight="4dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:text="@string/program"
                        android:gravity="center"
                        android:textSize="16dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twentyH"
                        android:textColor="@color/colorBlack"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:text="Индивидуально"
                        android:textStyle="bold"
                        android:textSize="16dp"/>
                    <TextView
                        android:id="@+id/textview2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:text="@string/cost2"
                        android:textSize="16dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/curr2"
                        android:textSize="16dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/smartchat" />

                    <Button
                        android:layout_width="170dp"
                        android:layout_height="40dp"
                        android:background="@drawable/button_design"
                        android:text="@string/smth"
                        android:layout_marginBottom="15dp"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>


    </RelativeLayout>
</ScrollView>
