<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ActivationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/sky"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/activation"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />
        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="150dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/entercode"
                        android:textSize="19dp"

                        android:paddingLeft="15dp"
                        android:paddingRight="7dp"/>
                    <TextView
                        android:id="@+id/error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Error"
                        android:maxWidth="300dp"
                        android:textSize="14dp"
                        android:visibility="invisible"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/red"/>
                    <TextView
                        android:layout_width="250dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/enter_code"
                        android:textSize="17dp"/>
                    <EditText
                        android:id="@+id/phone_activation"
                        android:layout_width="250dp"
                        android:layout_height="30dp"
                        android:paddingBottom="3dp"
                        android:paddingLeft="15dp"
                        android:background="@drawable/gray_bottom_line"
                        android:textSize="18dp"/>
                    <TextView
                        android:id="@+id/codeError"
                        android:layout_width="250dp"
                        android:layout_height="16dp"
                        android:textSize="13dp"
                        android:visibility="invisible"
                        android:gravity="right"
                        android:text="@string/require"
                        android:textColor="@color/red"/>
                    <Button
                        android:id="@+id/confirm"
                        android:layout_width="200dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/confirm"
                        android:onClick="onClick"
                        android:textColor="@color/white"
                        android:background="@drawable/button_design"/>
                    <TextView
                        android:id="@+id/repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:background="@drawable/selector"
                        android:padding="5dp"
                        android:textSize="14dp"
                        android:onClick="onClick"
                        android:layout_marginTop="10dp"
                        android:paddingRight="15dp"
                        android:text="@string/resend"/>

                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>