<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RestoreSecondActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/sky"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/account_restore"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />
        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:id="@+id/mainLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="35dp">
                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="100dp"
                        android:layout_centerHorizontal="true"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fill_in"
                            android:textSize="20dp"/>
                        <TextView
                            android:id="@+id/error"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:textSize="14dp"
                            android:visibility="invisible"/>
                        <TextView
                            android:layout_width="250dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="25dp"
                            android:text="@string/enter_code"
                            android:textSize="18dp"/>
                        <EditText
                            android:id="@+id/enterCode"
                            android:layout_width="250dp"
                            android:layout_height="30dp"
                            android:paddingBottom="3dp"
                            android:paddingLeft="5dp"
                            android:background="@drawable/gray_bottom_line"
                            android:textSize="18dp"/>
                        <TextView
                            android:id="@+id/errorCode"
                            android:layout_width="250dp"
                            android:layout_height="16dp"
                            android:visibility="invisible"
                            android:textSize="13dp"
                            android:gravity="right"
                            android:text="@string/require"
                            android:textColor="@color/red"/>
                        <TextView
                            android:layout_width="250dp"
                            android:layout_height="30dp"
                            android:text="@string/enterPassword"
                            android:textSize="18dp"/>
                        <EditText
                            android:id="@+id/newPass"
                            android:layout_width="250dp"
                            android:layout_height="30dp"
                            android:paddingBottom="3dp"
                            android:inputType="textPassword"
                            android:paddingLeft="5dp"
                            android:background="@drawable/gray_bottom_line"
                            android:textSize="18dp"/>
                        <TextView
                            android:id="@+id/errorPass"
                            android:layout_width="250dp"
                            android:layout_height="16dp"
                            android:visibility="invisible"
                            android:textSize="13dp"
                            android:gravity="right"
                            android:text="@string/require"
                            android:textColor="@color/red"/>
                        <TextView
                            android:layout_width="250dp"
                            android:layout_height="30dp"
                            android:text="@string/repeat_pass"
                            android:textSize="18dp"/>
                        <EditText
                            android:id="@+id/repeatPass"
                            android:layout_width="250dp"
                            android:layout_height="30dp"
                            android:paddingBottom="3dp"
                            android:inputType="textPassword"
                            android:paddingLeft="5dp"
                            android:background="@drawable/gray_bottom_line"
                            android:textSize="18dp"/>
                        <TextView
                            android:id="@+id/errorRepeatPass"
                            android:layout_width="250dp"
                            android:layout_height="16dp"
                            android:visibility="invisible"
                            android:textSize="13dp"
                            android:gravity="right"
                            android:text="@string/require"
                            android:textColor="@color/red"/>
                        <Button
                            android:id="@+id/restore"
                            android:layout_width="200dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/restore"
                            android:textColor="@color/white"
                            android:background="@drawable/button_design"/>
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>